// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESPN's current slate > matches the snapshot 1`] = `
{
  "date": "2026-10-06",
  "games": [
    {
      "away": {
        "abbreviation": "CAR",
        "color": "e30426",
        "id": "7",
        "location": "Carolina",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/car.png",
        "logoDark": null,
        "name": "Carolina Hurricanes",
        "record": "1-1-1",
        "score": 0,
        "shortName": "Hurricanes",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "CARNHL",
      ],
      "clock": "0:00",
      "detail": "10/6 - 7:00 PM EDT",
      "home": {
        "abbreviation": "MTL",
        "color": "c41230",
        "id": "10",
        "location": "Montreal",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/mtl.png",
        "logoDark": null,
        "name": "Montreal Canadiens",
        "record": "1-0-1",
        "score": 0,
        "shortName": "Canadiens",
        "winner": false,
      },
      "id": "401891815",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-06T23:00:00.000Z",
      "status": "scheduled",
      "venue": "Bell Centre",
    },
    {
      "away": {
        "abbreviation": "NSH",
        "color": "fdba31",
        "id": "27",
        "location": "Nashville",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nsh.png",
        "logoDark": null,
        "name": "Nashville Predators",
        "record": "1-1-0",
        "score": 0,
        "shortName": "Predators",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "Scripps Sports",
      ],
      "clock": "0:00",
      "detail": "10/6 - 7:00 PM EDT",
      "home": {
        "abbreviation": "TOR",
        "color": "003e7e",
        "id": "21",
        "location": "Toronto",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/tor.png",
        "logoDark": null,
        "name": "Toronto Maple Leafs",
        "record": "1-2-0",
        "score": 0,
        "shortName": "Maple Leafs",
        "winner": false,
      },
      "id": "401892449",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-06T23:00:00.000Z",
      "status": "scheduled",
      "venue": "Scotiabank Arena",
    },
    {
      "away": {
        "abbreviation": "OTT",
        "color": "dd1a32",
        "id": "14",
        "location": "Ottawa",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/ott.png",
        "logoDark": null,
        "name": "Ottawa Senators",
        "record": "2-0-0",
        "score": 0,
        "shortName": "Senators",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "DSN",
      ],
      "clock": "0:00",
      "detail": "10/6 - 7:00 PM EDT",
      "home": {
        "abbreviation": "DET",
        "color": "e30526",
        "id": "5",
        "location": "Detroit",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/det.png",
        "logoDark": null,
        "name": "Detroit Red Wings",
        "record": "0-2-0",
        "score": 0,
        "shortName": "Red Wings",
        "winner": false,
      },
      "id": "401892450",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-06T23:00:00.000Z",
      "status": "scheduled",
      "venue": "Little Caesars Arena",
    },
    {
      "away": {
        "abbreviation": "UTA",
        "color": "000000",
        "id": "129764",
        "location": "Utah",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/uta.png",
        "logoDark": null,
        "name": "Utah Mammoth",
        "record": "2-1-0",
        "score": 0,
        "shortName": "Mammoth",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "MSGSN",
        "Utah 16",
      ],
      "clock": "0:00",
      "detail": "10/6 - 7:00 PM EDT",
      "home": {
        "abbreviation": "NJ",
        "color": "e30b2b",
        "id": "11",
        "location": "New Jersey",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nj.png",
        "logoDark": null,
        "name": "New Jersey Devils",
        "record": "1-1-0",
        "score": 0,
        "shortName": "Devils",
        "winner": false,
      },
      "id": "401892451",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-06T23:00:00.000Z",
      "status": "scheduled",
      "venue": "Prudential Center",
    },
    {
      "away": {
        "abbreviation": "MIN",
        "color": "124734",
        "id": "30",
        "location": "Minnesota",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/min.png",
        "logoDark": null,
        "name": "Minnesota Wild",
        "record": "2-0-0",
        "score": 0,
        "shortName": "Wild",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "MSGB",
        "MINNHL",
      ],
      "clock": "0:00",
      "detail": "10/6 - 7:00 PM EDT",
      "home": {
        "abbreviation": "BUF",
        "color": "00468b",
        "id": "2",
        "location": "Buffalo",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/buf.png",
        "logoDark": null,
        "name": "Buffalo Sabres",
        "record": "1-1-0",
        "score": 0,
        "shortName": "Sabres",
        "winner": false,
      },
      "id": "401892453",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-06T23:00:00.000Z",
      "status": "scheduled",
      "venue": "KeyBank Center",
    },
    {
      "away": {
        "abbreviation": "NYI",
        "color": "00529b",
        "id": "12",
        "location": "New York",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nyi.png",
        "logoDark": null,
        "name": "New York Islanders",
        "record": "1-1-0",
        "score": 0,
        "shortName": "Islanders",
        "winner": false,
      },
      "broadcasts": [
        "ESPN",
      ],
      "clock": "0:00",
      "detail": "10/6 - 7:30 PM EDT",
      "home": {
        "abbreviation": "NYR",
        "color": "0056ae",
        "id": "13",
        "location": "New York",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nyr.png",
        "logoDark": null,
        "name": "New York Rangers",
        "record": "3-1-0",
        "score": 0,
        "shortName": "Rangers",
        "winner": false,
      },
      "id": "401892452",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-06T23:30:00.000Z",
      "status": "scheduled",
      "venue": "Madison Square Garden",
    },
    {
      "away": {
        "abbreviation": "STL",
        "color": "0070b9",
        "id": "19",
        "location": "St. Louis",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/stl.png",
        "logoDark": null,
        "name": "St. Louis Blues",
        "record": "1-1-0",
        "score": 0,
        "shortName": "Blues",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "CHSN",
        "Blues App",
        "BN+",
      ],
      "clock": "0:00",
      "detail": "10/6 - 8:00 PM EDT",
      "home": {
        "abbreviation": "CHI",
        "color": "e31937",
        "id": "4",
        "location": "Chicago",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/chi.png",
        "logoDark": null,
        "name": "Chicago Blackhawks",
        "record": "0-3-0",
        "score": 0,
        "shortName": "Blackhawks",
        "winner": false,
      },
      "id": "401891779",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-07T00:00:00.000Z",
      "status": "scheduled",
      "venue": "United Center",
    },
    {
      "away": {
        "abbreviation": "VGK",
        "color": "344043",
        "id": "37",
        "location": "Vegas",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/vgk.png",
        "logoDark": null,
        "name": "Vegas Golden Knights",
        "record": "2-1-0",
        "score": 0,
        "shortName": "Golden Knights",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "Scripps Sports",
        "KONG",
        "KING 5",
        "KHN",
        "Prime Video (Local)",
      ],
      "clock": "0:00",
      "detail": "10/6 - 9:40 PM EDT",
      "home": {
        "abbreviation": "SEA",
        "color": "000d33",
        "id": "124292",
        "location": "Seattle",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/sea.png",
        "logoDark": null,
        "name": "Seattle Kraken",
        "record": "2-1-0",
        "score": 0,
        "shortName": "Kraken",
        "winner": false,
      },
      "id": "401892454",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-07T01:40:00.000Z",
      "status": "scheduled",
      "venue": "Climate Pledge Arena",
    },
    {
      "away": {
        "abbreviation": "FLA",
        "color": "e51937",
        "id": "26",
        "location": "Florida",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/fla.png",
        "logoDark": null,
        "name": "Florida Panthers",
        "record": "1-0-2",
        "score": 0,
        "shortName": "Panthers",
        "winner": false,
      },
      "broadcasts": [
        "ESPN",
      ],
      "clock": "0:00",
      "detail": "10/6 - 10:00 PM EDT",
      "home": {
        "abbreviation": "LA",
        "color": "121212",
        "id": "8",
        "location": "Los Angeles",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/la.png",
        "logoDark": null,
        "name": "Los Angeles Kings",
        "record": "0-1-1",
        "score": 0,
        "shortName": "Kings",
        "winner": false,
      },
      "id": "401891806",
      "period": 0,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-07T02:00:00.000Z",
      "status": "scheduled",
      "venue": "crypto.com Arena",
    },
  ],
}
`;

exports[`a finished slate > matches the snapshot 1`] = `
{
  "date": "2026-10-03",
  "games": [
    {
      "away": {
        "abbreviation": "CHI",
        "color": "e31937",
        "id": "4",
        "location": "Chicago",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/chi.png",
        "logoDark": null,
        "name": "Chicago Blackhawks",
        "record": "0-3-0",
        "score": 3,
        "shortName": "Blackhawks",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "CHSN",
        "MSGB",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "BUF",
        "color": "00468b",
        "id": "2",
        "location": "Buffalo",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/buf.png",
        "logoDark": null,
        "name": "Buffalo Sabres",
        "record": "1-1-0",
        "score": 4,
        "shortName": "Sabres",
        "winner": true,
      },
      "id": "401891776",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "KeyBank Center",
    },
    {
      "away": {
        "abbreviation": "MTL",
        "color": "c41230",
        "id": "10",
        "location": "Montreal",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/mtl.png",
        "logoDark": null,
        "name": "Montreal Canadiens",
        "record": "1-0-1",
        "score": 5,
        "shortName": "Canadiens",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
      ],
      "clock": "0:00",
      "detail": "Final/OT",
      "home": {
        "abbreviation": "PIT",
        "color": "000000",
        "id": "16",
        "location": "Pittsburgh",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/pit.png",
        "logoDark": null,
        "name": "Pittsburgh Penguins",
        "record": "2-0-0",
        "score": 6,
        "shortName": "Penguins",
        "winner": true,
      },
      "id": "401891822",
      "period": 4,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "PPG Paints Arena",
    },
    {
      "away": {
        "abbreviation": "WSH",
        "color": "d71830",
        "id": "23",
        "location": "Washington",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/wsh.png",
        "logoDark": null,
        "name": "Washington Capitals",
        "record": "1-1-0",
        "score": 1,
        "shortName": "Capitals",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "MNMT",
        "The Spot - MTN",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "TB",
        "color": "003e7e",
        "id": "20",
        "location": "Tampa Bay",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/tb.png",
        "logoDark": null,
        "name": "Tampa Bay Lightning",
        "record": "1-1-0",
        "score": 3,
        "shortName": "Lightning",
        "winner": true,
      },
      "id": "401891826",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "Benchmark International Arena",
    },
    {
      "away": {
        "abbreviation": "OTT",
        "color": "dd1a32",
        "id": "14",
        "location": "Ottawa",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/ott.png",
        "logoDark": null,
        "name": "Ottawa Senators",
        "record": "1-0-0",
        "score": 3,
        "shortName": "Senators",
        "winner": true,
      },
      "broadcasts": [
        "ESPN+",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "TOR",
        "color": "003e7e",
        "id": "21",
        "location": "Toronto",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/tor.png",
        "logoDark": null,
        "name": "Toronto Maple Leafs",
        "record": "1-2-0",
        "score": 2,
        "shortName": "Maple Leafs",
        "winner": false,
      },
      "id": "401892434",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "Scotiabank Arena",
    },
    {
      "away": {
        "abbreviation": "CAR",
        "color": "e30426",
        "id": "7",
        "location": "Carolina",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/car.png",
        "logoDark": null,
        "name": "Carolina Hurricanes",
        "record": "1-1-1",
        "score": 3,
        "shortName": "Hurricanes",
        "winner": true,
      },
      "broadcasts": [
        "ESPN+",
        "NBC Sports Phil",
        "CARNHL",
      ],
      "clock": "0:00",
      "detail": "Final/OT",
      "home": {
        "abbreviation": "PHI",
        "color": "fe5823",
        "id": "15",
        "location": "Philadelphia",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/phi.png",
        "logoDark": null,
        "name": "Philadelphia Flyers",
        "record": "0-1-2",
        "score": 2,
        "shortName": "Flyers",
        "winner": false,
      },
      "id": "401892435",
      "period": 4,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "Xfinity Mobile Arena",
    },
    {
      "away": {
        "abbreviation": "UTA",
        "color": "000000",
        "id": "129764",
        "location": "Utah",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/uta.png",
        "logoDark": null,
        "name": "Utah Mammoth",
        "record": "2-0-0",
        "score": 4,
        "shortName": "Mammoth",
        "winner": true,
      },
      "broadcasts": [
        "ESPN+",
        "Utah 16",
        "CBJNHL",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "CBJ",
        "color": "002d62",
        "id": "29",
        "location": "Columbus",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/cbj.png",
        "logoDark": null,
        "name": "Columbus Blue Jackets",
        "record": "1-1-0",
        "score": 1,
        "shortName": "Blue Jackets",
        "winner": false,
      },
      "id": "401892436",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "Nationwide Arena",
    },
    {
      "away": {
        "abbreviation": "SEA",
        "color": "000d33",
        "id": "124292",
        "location": "Seattle",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/sea.png",
        "logoDark": null,
        "name": "Seattle Kraken",
        "record": "1-1-0",
        "score": 1,
        "shortName": "Kraken",
        "winner": false,
      },
      "broadcasts": [
        "NHL Net",
        "KONG",
        "KHN",
        "Prime Video (Local)",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "EDM",
        "color": "00205b",
        "id": "6",
        "location": "Edmonton",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/edm.png",
        "logoDark": null,
        "name": "Edmonton Oilers",
        "record": "2-0-1",
        "score": 3,
        "shortName": "Oilers",
        "winner": true,
      },
      "id": "401892437",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:00:00.000Z",
      "status": "final",
      "venue": "Rogers Place",
    },
    {
      "away": {
        "abbreviation": "NJ",
        "color": "e30b2b",
        "id": "11",
        "location": "New Jersey",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nj.png",
        "logoDark": null,
        "name": "New Jersey Devils",
        "record": "1-1-0",
        "score": 0,
        "shortName": "Devils",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "MSG",
        "MSGSN",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "NYI",
        "color": "00529b",
        "id": "12",
        "location": "New York",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nyi.png",
        "logoDark": null,
        "name": "New York Islanders",
        "record": "1-1-0",
        "score": 6,
        "shortName": "Islanders",
        "winner": true,
      },
      "id": "401891818",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-03T23:30:00.000Z",
      "status": "final",
      "venue": "UBS Arena",
    },
    {
      "away": {
        "abbreviation": "BOS",
        "color": "231f20",
        "id": "1",
        "location": "Boston",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/bos.png",
        "logoDark": null,
        "name": "Boston Bruins",
        "record": "2-1-0",
        "score": 1,
        "shortName": "Bruins",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "MINNHL",
        "KSTC",
        "NESN",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "MIN",
        "color": "124734",
        "id": "30",
        "location": "Minnesota",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/min.png",
        "logoDark": null,
        "name": "Minnesota Wild",
        "record": "2-0-0",
        "score": 4,
        "shortName": "Wild",
        "winner": true,
      },
      "id": "401891814",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-04T00:00:00.000Z",
      "status": "final",
      "venue": "Grand Casino Arena",
    },
    {
      "away": {
        "abbreviation": "DAL",
        "color": "20864c",
        "id": "9",
        "location": "Dallas",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/dal.png",
        "logoDark": null,
        "name": "Dallas Stars",
        "record": "0-2-0",
        "score": 1,
        "shortName": "Stars",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "Scripps Sports",
        "Prime Video (Local)",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "NSH",
        "color": "fdba31",
        "id": "27",
        "location": "Nashville",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nsh.png",
        "logoDark": null,
        "name": "Nashville Predators",
        "record": "1-1-0",
        "score": 2,
        "shortName": "Predators",
        "winner": true,
      },
      "id": "401892438",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-04T00:00:00.000Z",
      "status": "final",
      "venue": "Bridgestone Arena",
    },
    {
      "away": {
        "abbreviation": "STL",
        "color": "0070b9",
        "id": "19",
        "location": "St. Louis",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/stl.png",
        "logoDark": null,
        "name": "St. Louis Blues",
        "record": "1-1-0",
        "score": 1,
        "shortName": "Blues",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "Blues App",
        "BN+",
        "Altitude Sports",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "COL",
        "color": "860038",
        "id": "17",
        "location": "Colorado",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/col.png",
        "logoDark": null,
        "name": "Colorado Avalanche",
        "record": "2-0-0",
        "score": 6,
        "shortName": "Avalanche",
        "winner": true,
      },
      "id": "401892439",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-04T01:00:00.000Z",
      "status": "final",
      "venue": "Ball Arena",
    },
    {
      "away": {
        "abbreviation": "CGY",
        "color": "dd1a32",
        "id": "3",
        "location": "Calgary",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/cgy.png",
        "logoDark": null,
        "name": "Calgary Flames",
        "record": "0-2-0",
        "score": 1,
        "shortName": "Flames",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
      ],
      "clock": "0:00",
      "detail": "Final",
      "home": {
        "abbreviation": "VAN",
        "color": "003e7e",
        "id": "22",
        "location": "Vancouver",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/van.png",
        "logoDark": null,
        "name": "Vancouver Canucks",
        "record": "2-1-0",
        "score": 4,
        "shortName": "Canucks",
        "winner": true,
      },
      "id": "401892440",
      "period": 3,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-04T02:00:00.000Z",
      "status": "final",
      "venue": "Rogers Arena",
    },
    {
      "away": {
        "abbreviation": "LA",
        "color": "121212",
        "id": "8",
        "location": "Los Angeles",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/la.png",
        "logoDark": null,
        "name": "Los Angeles Kings",
        "record": "0-1-0",
        "score": 4,
        "shortName": "Kings",
        "winner": false,
      },
      "broadcasts": [
        "ESPN+",
        "NBC Sports BA",
        "ABTV",
      ],
      "clock": "0:00",
      "detail": "Final/OT",
      "home": {
        "abbreviation": "SJ",
        "color": "00788a",
        "id": "18",
        "location": "San Jose",
        "logo": "https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/sj.png",
        "logoDark": null,
        "name": "San Jose Sharks",
        "record": "1-0-0",
        "score": 5,
        "shortName": "Sharks",
        "winner": true,
      },
      "id": "401892441",
      "period": 4,
      "season": 2027,
      "seasonType": 2,
      "startTime": "2026-10-04T02:00:00.000Z",
      "status": "final",
      "venue": "SAP Center at San Jose",
    },
  ],
}
`;
